# dbrx-genie-teams-365

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  config.py  main.py  pyproject.toml
bot/: bot.py
database/: database.py  db_models.py
handlers/: file_card_handler.py  genie_list_handler.py  message_handler.py
modules/: AdaptiveCardTemplate.py  genie.py
tests/: conftest.py
tests/database/: test_database.py
tests/handlers/: test_message_handler.py
tests/modules/: test_genie.py
tests/utils/: test_bot_utils.py  test_llm_summarizer.py
utils/: bot_utils.py  chart_card_generator.py  llm_summarizer.py  sync_lru_cache_async.py  user_group.py
